organised io driver module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 mio = "0.6"
 pin-project-lite = "0.1"
 rsc2_pb = {path = "../rsc2/rsc2-pb", features=["codec"]}
-tokio-util = "0.2"
+tokio-util = {version = "0.2", features=["codec"]}
 futures = "0.3"
 bytes = "0.5"
+websocket-lite = "0.3"
+tokio = {version ="0.2", features=["io-util"]}
